Fixed alignments issues in the header Fixes #45

--- a/src/sass/views/_mediumViewOver.scss
+++ b/src/sass/views/_mediumViewOver.scss
@@ -48,7 +48,7 @@ $navigation-bar-gradient-end: #1B5A9F;
 #wmms {
 	height: 1.9em;
 	top: 0;
-	right: 0;
+	right: 15px;
 	margin-top: -2.8em;
 	position: absolute;
 	z-index: 2;
@@ -98,7 +98,7 @@ $navigation-bar-gradient-end: #1B5A9F;
 #wb-srch {
 	position: absolute;
 	top: 0;
-	right: 0;
+	right: 15px;
 	margin-top: 0.5em;
 
 	input {
